--- a/3주차 /4팀/3주차_이계무_과제2.md
+++ b/3주차 /4팀/3주차_이계무_과제2.md
@@ -23,3 +23,53 @@ titanic['title'] = titanic.Name.str.split().str[1] # 이를 새로운 컬럼을 
 ```
 
 ### 3.4.2 문잣값 교체하기
+```python
+titanic.title.str.replace('.','',regex=False) # 첫 parameter를 두번째 parameter로, 정규표현식 여부에 따라 True/False
+```
+* 데이터프레임에 적용하기 위해서는 특정 컬럼을 지정해서 대입해야 한다. titanic['title'] = titanic.title.str.replace('.','',regex=False)
+* 빈도가 낮은 데이터의 경우, 유사한 데이터의 경우 여러개를 묶어 처리해준다.
+* titanic['title']의 경우, Mr, Miss, Mrs, Rare, Master 5개의 고윳값으로 정리해준다.
+
+### 3.4.3 정규 표현식 가이드
+![정규표현식](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/2c3a69da-da08-482b-9915-1bf7ba033298)
+
+* 잘 외워서 사용할 것. 혹은 필요할때 찾아보고 바로 응용해도 됨. 메이커스데이 당시 ChatGPT의 스크립트를 슬라이싱하기 위해 정규표현식을 JS에서 이용했던 적이 있다.
+
+```python
+titanic['title'] = titanic.Name.str.extract(r'(A-Za-z]+)\.', expand=False) # 영문자 오른쪽에 점이 있는 경우만 추출
+```
+
+* 정규표현식 연습 사이트 : https://regexr.com/
+
+### 3.4.4 문자 수 세기
+```python
+titanic['Name'].str.count() # 매개변수의 문자가 각 인덱스마다 몇개 들어갔는지 알 수 있다.
+```
+
+## 3.5 카테고리 데이터 처리
+
+* 명목형(Nominal), 순서형(Ordinal) 2개의 타입이 있다. String의 경우 대부분 명목형, 숫자로 나오면 순서형으로 생각할 수 있다.
+### 3.5.1 숫자 타입 데이터를 카테고리 타입으로 만들기
+```python
+bins = [0,9,18,40,60,81]
+labels = ['어린이', '청소년', '20/30대','40/50대','60대 이상']
+titanic['Age_band_cut'] = pd.cut(titanic['Age'], bins = bins, labels = labels)
+```
+* pd.cut을 통해 column을 bins을 기준으로 labels로 구분한다.
+
+```python
+labels = ['어린이', '청소년', '20/30대','40/50대','60대 이상']
+titanic['Age_band_qcut'] = pd.qcut(titanic['Age'], q=5, labels = labels)
+```
+* pd.qcut을 통해 q구간만큼 labels을 붙여 나눈다. 각 구간이 비슷한 개수로 나뉘어진다.
+
+### 3.5.2 카테고리 데이터에 순서 만들기
+```python
+titanic['Pclass'] = titanic.Pclass.astype('category')
+titanic.Pclass.cat.set_categories([3,2,1], ordered = True)
+titanic.Pclass.sort_values()
+```
+* Pclass는 낮을 수록 좋은 등급이므로 카테고리의 순서를 숫자크기의 역순으로 매겨준다.
+* 오름차순 정렬하는 sort_values()함수를 적용했을 때, Pclass가 3, 2, 1인 순서대로 정렬되는 것을 통해 제대로 순서가 적용됐음을 알 수 있다.
+
+> 문자열을 잘 분리하면 새로운 컬럼을 만드는 등 유용하게 사용할 수 있다. 특히 정규표현식은 다른 언어에서도 쓸 수 있으니 잘 외워두자.
