--- a/3주차 /3팀/3주차_조윤정_과제2.md
+++ b/3주차 /3팀/3주차_조윤정_과제2.md
@@ -76,6 +76,34 @@ titanic[titanic['Name'].str.contains(‘Mr')]
 문자열에서 특정 패턴에 부합하는 단어 검색   
 문자열에서 특정 단어와 기호를 변경하거나 교체
 
+## 정규 표현식 필수 문법
+***
+### 그룹과 범위 관련 표현
+__|__ 또는(or) ex)a|b   
+__[]__ 문자 집합. 대괄호 안에 있는 어떤 문자라도 매치함. 예: [abc], [a-z]   
+__(?:)__ 검색은 하지만 기억하자는 않음   
+__()__ 괄호 안의 문자열을 하나의 그룹 문자로 취급. 예 : (abc)   
+__[^]__ 부정 문자 집합. 대괄호 안의 문자를 제외한 문자를 매치함. 예: Tabe], [Aa-z]   
+### 양의 대소 표현
+__•__ 1 개의임의문자. 예:a., .b   
+__*__ 앞에 문자가 무한개로 존재하거나 없거나 문자가 0개 이상. 예 : ab*c   
+__{n}__ 앞의 문자가 n번 반복. 예: ab{2}c   
+__{min, max}__ 앞의 문자가 최소 min, 최대 max만큼 반복. ?, * +로 대체 가능. 예 : ab{2,8}c   
+__?__ 앞에 문자가 있거나 없거나 문자가 0개 또는 1 개. 예: ab?c   
+__+__ 앞의 문자가 최소 1개 이상 존재. 예: ab+c   
+__{min,}__ 앞의 문자가 최소 min만큼반복. 예: a{2,}bc   
+### 경계와 위치 표현
+__\b 문자 \b__ 문자의 경계 부분에 매치함. 예 : \b   
+__^__ 뒤의 문자로 문자열시작. 예: ^a   
+__\B 문자 \B__ 문자의 경계가 아닌 부분에 매치함   
+__$__ 앞의 문자로 문자열이 종료. 예 : a$   
+### 역슬래시 관련 자주 사용하는 표현
+__\__ 특수 문자가 아닌 문자   
+__\d__ 모든 숫자. [0-9]와 동일   
+__\w__ 모든 문자 또는 숫자. [a-zA-Z0-9]와 동일   
+__\s__ 공백을 의미. [\t\n\r\f\v]와 동일   
+__\\__ 역슬래시 문자 자체. 이것을 피하려면 정규 표현식 앞에 r을 사용함   
+__\D__ 숫자가 아닌 모든 문자. [^0-9]와 동일
 ```python
 titanicftitle'] = titanic.Name.str.extract(r'([A-Za-z]+)\.', expand=False)
 titanic[titanic['Name'].str.match(r'AY.*') == True]
