--- a/3주차 /5팀/3주차_석민정_과제3.md
+++ b/3주차 /5팀/3주차_석민정_과제3.md
@@ -1,13 +1,13 @@
-## Q) 아래와 같이 Categorical()함수를 사용해 생성했을 때, length 길이와 카테고리의 갯수가 각각 어떻게 될까요?
+## Q) 아래와 같이 카테고리 데이터를 생성했을 때, length 길이와 카테고리의 갯수가 각각 어떻게 될까요?
 
 ```
-pd.Categorical(['a',3,np.nan,'a',1,1,2,np.nan,'b','c',4,'c','d',5,5,np.nan])
+['a',3,np.nan,'a',1,1,2,np.nan,'b','c',4,'c','d',5,5,np.nan]
 ```
 
 <details>
   <summary> 힌트 </summary>
 
-결측값은 카테고리 데이터로 인식되지 X !!
+ Categorical()함수를 사용해 코드 작성해보기, 결측값은 카테고리 데이터로 인식되지 X !!
 </details>
 
 
