--- a/3주차 /3팀/3주차_조윤정_과제2.md
+++ b/3주차 /3팀/3주차_조윤정_과제2.md
@@ -52,9 +52,9 @@ titanic.title.value_counts()
 
 ## 복수의 문자를 동시에 바꾸기
 ```python
-rare_name = ['Dr', 'Rev', ’y’, 'Impe', 'Planke', 'Major', 'Gordon\ 'Col*, 'Jonkheer*,
+rare_name = ['Dr', 'Rev', ’y’, 'Impe', 'Planke', 'Major', 'Gordon', 'Col', 'Jonkheer',
 'the', 'Billiard’, 'Don', 'Shawah*, 'Velde’, 'Capt', 'Cruyssen',
-1 Mulder'Melkebeke', 'Steen'Walle', ’Messemaeker'丄 'der',
+'1 Mulder'Melkebeke', 'Steen'Walle', ’Messemaeker', 'der',
 'Pelsmaeker', 'Carlo']
 titanic['title'] = titanic['title'].replace(rare_name, 'Rare1, regex=False)
 
