--- a/3주차 /4팀/3주차_이계무_과제3.md
+++ b/3주차 /4팀/3주차_이계무_과제3.md
@@ -1,1 +1,7 @@
-t
+1. titanic 데이터셋에서, 정규표현식을 활용하여 Name 컬럼에서 FirstName을 추출하여 새로운 컬럼으로 만들어보세요.
+(힌트 : FirstName은 Name에서 쉼표(,) 앞에 있는 영문자들을 뜻함)
+2. seaborn 데이터셋에서 healthexp 데이터셋을 활용하여, Country 컬럼의 고윳값을 확인한 뒤, Continent(대륙) 컬럼을 새로 만들어,
+해당 국가가 속하는 대륙에 맞게 Europe, America, Asia 값을 저장해보세요.
+(힌트: Continent 컬럼은 일단 Country 컬럼을 그대로 복사하여 만든 뒤, replace함수를 활용하여 국가들을 대륙으로 바꿀 것, 정규표현식 사용할 필요 없음)
+
+정답 : https://colab.research.google.com/drive/1GrypjZlBdX2dKll0AOGHPBZmM4bIHZL8?hl=ko#scrollTo=aEfyyPhbEi4P
