--- a/3주차 /3팀/3주차_조윤정_과제3.md
+++ b/3주차 /3팀/3주차_조윤정_과제3.md
@@ -1,5 +1,5 @@
 ## 문제
-### planets 데이터셋에서 결측값을 제거한 뒤,    
+planets 데이터셋에서 결측값을 제거한 뒤,    
 아래 주어진 대로 구간형으로 범주화한 뒤,    
 판다스의 style 모듈을 호출하여 스타일링하여 출력해보세요!
 
@@ -7,13 +7,13 @@
 import pandas as pd
 import numpy as np
 import seaborn as sns
+
+[1, 50, 100, 300, 500, 600, 800, 1000, 2500, 5000, 10000]   
+['1~50', '50~100', '100~300', '300~500', '500~600', '600~800', '800~1000', '1000~2500', '2500~5000', '5000~10000']
+
 ```
->[1, 50, 100, 300, 500, 600, 800, 1000, 2500, 5000, 10000]   
->['1~50', '50~100', '100~300', '300~500', '500~600', '600~800', '800~1000', '1000~2500', '2500~5000', '5000~10000']
-
-
 <details><summary>결과</summary><p>
-<img src = "https://github.com/yoonie03/image/issues/3#issue-1935855621">
+<img width="765" alt="image" src="https://github.com/yoonie03/image/assets/128327967/d9813fa3-ae52-4962-9df2-1a97984cdc90">
 
 </p></details>
 
