--- a/3주차 /3팀/3주차_조윤정_과제3.md
+++ b/3주차 /3팀/3주차_조윤정_과제3.md
@@ -1,6 +1,6 @@
 ## 문제
 planets 데이터셋에서 결측값을 제거한 뒤,    
-아래 주어진 대로 구간형으로 범주화한 뒤,    
+아래 주어진 것을 활용하여 구간형으로 범주화한 뒤,    
 판다스의 style 모듈을 호출하여 스타일링하여 출력해보세요!
 
 ```python
