--- a/3주차 /3팀/3주차_조윤정_과제2.md
+++ b/3주차 /3팀/3주차_조윤정_과제2.md
@@ -160,8 +160,19 @@ titanic['Age_band_qcut,] = pd.qcut(titanic.Age, q=5, labels=labels)
 #데이터를 20%비율로 자른 것
 ```
 
+# 3.5.2 카테고리 데이터에 순서 만들기
+카테고리 데이터에 순서를 정해주는 것
+```python
+pd.Categoricaia'a', 'b', ’c’, 'a', 'b', ’c'], ordered=True, categories=['c’, *b’, 'a'])
+titanic['Pclass’] = titanic.Pclass.astype('category')
+#순서를 부여하려면 매개변수 ordered에는 True를 입력하고, categories에는 작은 순서에서 큰 순
+서로 고윳값을 입력
+titanic.Pclass.cat.set_categories([3, 2, 1], ordered=True)
+#[]안에 작은순서에서 큰 순서로 범줏값을 입력
+```
+카테고리 타입은 명목형이 디폴트인데 순서형으로 변경하려면 set_categories()라는 함수를 활용  
 
-
-
-
-
+# 인상 깊은 코드 및 느낀점
+> list에 나오는 빈도가 적은 여러 코드들의 이름을 적어서, 하나의 기타 항목으로 합치는 코드가 기억에 남는다
+> 실제로 데이터 분석한 결과를 볼 때는 자주 나오는 큰 항목 위주로 그래프를 그리는 것이 더 분석으로서 의미가 있다고 생각했기에
+> 이렇게 기타 항목들을 처리해주는 작업이 인상깊었던 것 같다.
