--- a/3주차 /5팀/3주차_조예림_과제3.md
+++ b/3주차 /5팀/3주차_조예림_과제3.md
@@ -20,7 +20,7 @@
 <br/>
 <br/>
 
-#### 힌트
+### 힌트닷!!
 #### 1. Fare의 최대 최소 값은 print(titanic.Fare.min()) min,max 호출
 #### 2. 5개 범주이므로 bin의 지점은 6개!
 
@@ -40,5 +40,5 @@
 <br/>
 --------------------------------------------------------------------------------------------------------------------------------
 
-#### 답
+### 답이오
 <img width="772" alt="image" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/de4faedb-910e-477e-a3b9-860cff2cd057">
