--- a/3주차 /4팀/3주차_정현엽_과제2.md
+++ b/3주차 /4팀/3주차_정현엽_과제2.md
@@ -1,2 +1,7 @@
 # 3주차 과제
+## 문제
+# 주어진 코드를 수정하여 , 까지 삭제해보자. 자세한 사항은 코드 참고.
 <https://colab.research.google.com/drive/1mGHLsvTGm2hRMMViAr2LqLiL_fDM0a7W>
+
+## 정답
+<https://colab.research.google.com/drive/13piokokHXeZYtoDcf3RECuXNiiJTO3Z8#scrollTo=ubJcTDALYZHh>
