--- a/3주차 /5팀/3주차_김민성_과제3.md
+++ b/3주차 /5팀/3주차_김민성_과제3.md
@@ -2,7 +2,7 @@
 Name 값의 1번째 위치에 있는 데이터에 접근하여 'word'이라는 컬럼을 생성하여 호칭 값을 담는다. 그 후 입력된 문자를 그대로 전달하고 쉼표(,)를 공백으로 처리하여 실제 데이터프레임에 적용하여라.
 
 # 힌트
-1) split() 함수, replace() 함수, 매개변수 regex 사용
+1) split() 함수, replace() 함수, 매개변수 regex를 사용한다.
 2) 입력된 문자를 그대로 전달하기 위해서는 regex=False가 되어야 한다. 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
