--- a/3주차 /1팀/3주차_박광석_과제2.md
+++ b/3주차 /1팀/3주차_박광석_과제2.md
@@ -67,4 +67,8 @@ titanic['Age_band_cut'] = pd.cut(titanic['Age'], bins=bins, labes=labels)
 ### 비율형으로 범주화하기
 qcut() 함수를 사용한다.
 ## 3.5.2 카테고리 데이터에 순서 만들기
+Categorical()함수를 활용
+set_categories() 함수
+sort_value() 함수
+
 다시 공부해보기
