--- a/3주차 /1팀/3주차_한은결_과제3.md
+++ b/3주차 /1팀/3주차_한은결_과제3.md
@@ -1,1 +1,21 @@
-타이타닉 데이터를 불러와 Name 항목의
+타이타닉 데이터를 불러와 Name 항목에서 Mr., Mrs. 등의 호칭만 분리한 뒤  
+'Mr.','Mrs.','Miss.','Master.' 이 네 개의 호칭의 개수를 센 막대그래프를 나타내시오.  
+.  
+.  
+.  
+.  
+.  
+.  
+.  
+.  
+.  
+.  
+.  
+.  
+
+  
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/7352818c-c491-4f7d-bb71-9b3ac29a482f)
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/735b1a98-492f-41d2-907b-693f96ae955a)
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/e51b9ac7-0305-4763-acd3-09d1b65d74f0)
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/6631501b-d0cb-4c8a-ace6-e1efd7c6d829)
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128311918/f94b5937-c680-45c5-81d0-46888ca2c42d)
