--- a/3주차 /2팀/3주차_박신영_과제3.md
+++ b/3주차 /2팀/3주차_박신영_과제3.md
@@ -1,1 +1,74 @@
-1
+당신은 이제 빌런입니다.
+
+
+빌런답게 아래의 레시피를 엉망으로 만들어주세요.
+
+
+어떻게?
+
+
+모든 재료를 "SIUUU"로 바꾸어주세요.
+
+
+```python
+import numpy as np
+import pandas as pd
+
+ramen_recipe = {"Menu":["Basic","SinToowoomba","RamenJeon","Tantanmen"],
+                "Water":[550,np.NaN,500,500],
+                "Additions":["Nothing","Bacon, Onion, Mushroom, Whipping Cream","Cooking Oil","Peanut Butter"],
+                "Chef":["Paikjongwon","Sungsikyung","Paikjongwon","Paikjongwon"]}
+ramens = pd.DataFrame(ramen_recipe).set_index("Menu")
+```
+
+
+
+
+
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+힌트
+
+
+판다스의 replace 쓰시면 됩니다. 매개변수 잘 확인하세용~~~
+
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+
+답
+```python
+import numpy as np
+import pandas as pd
+import seaborn as sns
+
+ramen_recipe = {"Menu":["Basic","SinToowoomba","RamenJeon","Tantanmen"],
+                "Water":[550,np.NaN,500,500],
+                "Additions":["Nothing","Bacon, Onion, Mushroom, Whipping Cream","Cooking Oil","Peanut Butter"],
+                "Chef":["Paikjongwon","Sungsikyung","Paikjongwon","Paikjongwon"]}
+ramens = pd.DataFrame(ramen_recipe).set_index("Menu")
+
+siu = ["Nothing","Bacon, Onion, Mushroom, Whipping Cream","Cooking Oil","Peanut Butter"]
+ramens['Additions'] = ramens['Additions'].replace(siu,"SIUUU",regex=False)
+
+ramens
+```
+결과
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/7b23d14d-6b71-485f-9d0e-7ba656b079b9)
+
+
+
