--- a/4주차/4팀/4주차_이계무_과제2.md
+++ b/4주차/4팀/4주차_이계무_과제2.md
@@ -1,1 +1,46 @@
+# 4주차 과제
+## 3.6 람다를 활용한 데이터 처리 응용
+### 3.6.1 단일 컬럼에 람다 적용
+```python
+def fare_to_int(fare):
+  to_int = int(fare+fare/1000)
+  return to_int
+titanic['Fare'].map(fare_to_int).head()
+```
+```python
+titanic['Fare_int'] = titanic['Fare'].map(lambda x: int(x+x/1000)) 
+titanic[['Fare','Fare_int']].head() #map() 대신 apply()를 사용해도 동일하게 적용
+```
+```python
+titanic['Age'].apply(lambda x: 'Adult' if x>= 18 else 'Child') #새로운 변수 생성 가능
+```
+- lambda와 map, apply를 활용하여 간단하게 데이터프레임을 다룰 수 있다.
 
+### 3.6.2 데이터프레임에 람다 적용 예
+```python
+titanic[['SibSp','Parch']].apply(lambda x: x['SibSp'] + x['Parch'], axis=1)
+```
+- 2개 이상의 컬럼은 apply에 lambda를 적용하여 다룰 수 있다.
+```python
+iris_no_species = iris[['sepal_length','sepal_width','petal_length','petal_width']]
+iris_no_species.applymap(lambda x: x*10).head()
+```
+- 데이터프레임에 적용할 때는 applymap에 lambda를 이용한다.
+
+## 4.1 데이터 병합
+### 4.1.1 데이터를 위아래로 연결하기
+- append()와 concat() 함수를 이용하며, 주로 매개변수가 많아 더 많은 기능을 사용할 수 있는 concat() 함수를 이용한다.
+```python
+data_1 = pd.DataFrame({'음식명' : ['돈가스','피자','초밥','치킨','탕수육'], '카테고리':['일식','양식','일식','양식','중식']})
+data_2 = pd.DataFrame({'음식명' : ['갈비탕','냉면','짜장면','파스타','라멘'], '카테고리':['한식','한식','중식','양식','일식']})
+data_3 = pd.DataFrame({'음식명' : ['갈비탕','냉면','짜장면','파스타','라멘'],'판매인기지역' : ['서울','부산','제주','제주','서울']})
+pd.concat([data_1,data_2],ignore_index=True,keys=[data_1','data_2'])
+pd.concat([data_1,data_3],join='inner')
+```
+- concat함수의 매개변수 igrnoe_index는 두 df의 인덱스를 없애주고 새로 인덱스를 지정해주며, keys는 해당 데이터를 유래한 기존 df의 이름을 값으로 가진다. join은 outer로 하면 합집합을 만들며 해당 컬럼이 없을 경우 NaN으로 값을 채워주고, inner로 하면 교집합을 만든다.
+
+### 4.1.2 컬럼 기준으로 데이터 병합(좌우로 연결)하기
+```python
+pd.concat([data_1,data_2],axis=1)
+```
+- axis = 1로 매개변수를 전달하면 좌우로 병합되어 4열의 df가 된다.
