--- a/4주차/4팀/4주차_이계무_과제2.md
+++ b/4주차/4팀/4주차_이계무_과제2.md
@@ -112,3 +112,48 @@ pd.merge(menu_datal, menu_data2, how='outer’, left_index=True, right_index=Tru
 
 ## 4.2 데이터 재형성과 피벗
 ### 4.2.1 컬럼을 인덱스로 교환하기
+```python
+coffee_size_data.stack().unstack()
+테이블수 매장규모(평)
+스타벅스 10 28
+커피빈 8 22
+```
+- stack함수를 통해 전치하고, unstack을 통해 되돌린다.
+
+### 4.2.2 데이터 피벗하기
+```python
+data_stock.pivot(index='symbol', columns='date', values='volume')
+```
+- 특정 인덱스를 피벗으로 잡고, 특정 값의 변화를 보기 용이하다.
+
+### 4.2.3 데이터 멜트하기
+```python
+data_s.melt('음식명')
+음식명 variable value
+0 돈가스 평점 4.3
+1 우동 평점 4.2
+2 냉면 평점 4.6
+3 돈가스 가격 10000
+4 우동 가격 9000
+5 냉면 가격 12000
+6 돈가스 위치 삼성동
+7 우동 위치 명동
+8 냉면 위치 을지로입구
+data_s.melt('음식명').pivot('음식명', 'variable', 'value')
+```
+- 데이터의 컬럼명을 variable, 값을 value에 넣어 길게 재생성해준다.
+- 원상복구하려면 pivot을 이용하면 된다.
+
+### 4.2.4 복합 개체를 개별 개체로 분리하기
+```python
+data_e.explode('재료')
+재료 시간 방식
+0 밀가루 10 ［굽기,볶기］
+0 설탕 10 ［굽기,보기］
+0 계란 10 ［굽기,볶기］
+1 밀가루 10 NaN
+2 NaN 10 0
+3 버터 10 ［볶기,섞기］
+3 생크림 10 ［볶기,섞기］
+```
+- 한칸에 여러개 값이 들어있는 경우, 이를 explode 함수를 이용해 다 분리할 수 있다.
