4주차_조윤정_과제2.md

--- a/4주차/3팀/4주차_조윤정_과제2.md
+++ b/4주차/3팀/4주차_조윤정_과제2.md
@@ -316,7 +316,7 @@ data_stock.pivot(index='symbol', columns='date', values = 'volume')
 data_stock.pivot(index='date', columns='symbol', values = 'close')
 
 #pivot_table() 활용해도 동일한 결과 나옴, 매개변수도 pivot()과 동일
-pd.pivot_table(data_stock, values = 'close', index = 'date', columns = 'symbol)
+pd.pivot_table(data_stock, values = 'close', index = 'date', columns = 'symbol')
 ```
 
 ## 4.2.3 넓은 형태의 데이터를 긴 형태로 재형성하기
