4주차_조윤정_과제3.md

--- a/4주차/3팀/4주차_조윤정_과제3.md
+++ b/4주차/3팀/4주차_조윤정_과제3.md
@@ -9,7 +9,7 @@
 이 때 평균 미세먼지는 반올림한다. (round() 함수 이용 가능, 데이터프레임의 데이터 타입 보는법은 아래 참고)   
 
 ```python
-데이터이름.dtype
+데이터프레임이름.dtype
 ```
 
 <details><summary><힌트></summary>
