--- a/4주차/4팀/4주차_이계무_과제3.md
+++ b/4주차/4팀/4주차_이계무_과제3.md
@@ -1,2 +1,5 @@
-문제
+Seaborn 라이브러리에서 penguins 데이터셋을 로드하여 mm 단위의 값을 가지는 컬럼을 이용해 cm 단위의 값을 가지는 컬럼을 새로 만들고,
+g 단위의 값을 가지는 컬럼을 이용해 kg 단위의 값을 가지는 컬럼을 새로 만들어보세요. 
+(힌트 : map() 함수와 lambda 이용하기, 결측값 처리는 dropna() 이용하기.)
 답
+https://colab.research.google.com/drive/19Wy91rl9BfgqkEy6A-u3GlnfK4__eRWP?usp=sharing
