--- a/4주차/5팀/조예림_4주차_과제3.md
+++ b/4주차/5팀/조예림_4주차_과제3.md
@@ -2,7 +2,7 @@
 ### step2. 아래 표 data_1과 data_2의 가능한 경우의 수 전체를 기준으로 조합을 만들어내서 데이터를 병합하시오.
 
 #### 
-`import numpy as np
+```import numpy as np
 data_9 = pd.DataFrame(
     {
         '음식명' : ['돈가스', np.nan, '초밥', '치킨', np.nan],
@@ -10,24 +10,24 @@ data_9 = pd.DataFrame(
         '판매인기지역' : [np.nan, '부산', '제주', '제주', '서울']
     }
 )
-`
+```
 
-`import numpy as np
+```import numpy as np
 data_10=pd.DataFrame(
     {
         '음식명' : [np.nan, '냉면', '초밥', '치킨', '탕수육'],
         '카테고리' : ['일식', np.nan, '한식', '양식', np.nan]
     }
 )
-`
+```
 
-`import numpy as np
+```import numpy as np
 data_1=pd.DataFrame(
     {
         '음식명' : ['돈가스', '냉면', '초밥', '치킨', '탕수육'],
         '가격' : ['100', '200', '300', '400', '500']
     }
-)`
+)```
 
 
 
@@ -58,7 +58,7 @@ data_1=pd.DataFrame(
 
 
 ### 답 :
-`import pandas as pd
+```import pandas as pd
 import numpy as np
 data_9 = pd.DataFrame(
     {
@@ -75,4 +75,4 @@ data_10=pd.DataFrame(
 )
 data_2 = data_10.combine_first(data_9).drop('판매인기지역',axis=1)
 pd.merge(data_1,data_2)`
-`
+```
