--- a/4주차/5팀/조예림_4주차_과제3.md
+++ b/4주차/5팀/조예림_4주차_과제3.md
@@ -1,5 +1,9 @@
-### step1.  data_9와 data_10을 이용하여  data_10의 결측값을 data_9 의 값으로 채운 후 판매 인기 지역의 열을 삭제한 데이터를 data_2라는 이름으로 추출하시오.
-### step2. 아래 표 data_1과 data_2의 가능한 경우의 수 전체를 기준으로 조합을 만들어내서 데이터를 병합하시오.
+### step1.
+#### data_9와 data_10을 이용하여  data_10의 결측값을 data_9 의 값으로 채운 후
+#### 판매 인기 지역의 열을 삭제한 데이터를 data_2라는 이름으로 추출하시오.
+
+### step2.
+#### 아래 표 data_1과 data_2의 가능한 경우의 수 전체를 기준으로 조합을 만들어내서 데이터를 병합하시오.
 
 #### 
 ```import numpy as np
@@ -39,6 +43,7 @@ data_1=pd.DataFrame(
 
 #### 힌트 : combine함수, merge 함수 drop함수
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 ### 답 :
 ```import pandas as pd
