--- a/4주차/5팀/조예림_4주차_과제3.md
+++ b/4주차/5팀/조예림_4주차_과제3.md
@@ -16,7 +16,8 @@ data_9 = pd.DataFrame(
 )
 ```
 
-```import numpy as np
+``` import pandas as pd
+import numpy as np
 data_10=pd.DataFrame(
     {
         '음식명' : [np.nan, '냉면', '초밥', '치킨', '탕수육'],
