--- a/4주차/5팀/조예림_4주차_과제3.md
+++ b/4주차/5팀/조예림_4주차_과제3.md
@@ -62,5 +62,5 @@ data_10=pd.DataFrame(
     }
 )
 data_2 = data_10.combine_first(data_9).drop('판매인기지역',axis=1)
-pd.merge(data_1,data_2)`
+pd.merge(data_1,data_2)
 ```
