--- a/4주차/2팀/4주차_박신영_과제3.md
+++ b/4주차/2팀/4주차_박신영_과제3.md
@@ -48,7 +48,8 @@ pw_data3 = pd.DataFrame(password3)
 <br/><br/>
 
 ### 힌트
-- 매개변수 on 사용해서 병합하고
+- 매개변수 on, left_on, right_on 중에서 활용해서 병합하고
+- (필요에 따라 컬럼명을 조금 변경해도 좋습니다.)
 - drop 사용해서 A 사이의 열을 지워버리세용
 <br/><br/>
 <br/><br/>
@@ -82,4 +83,31 @@ pw_data3 = pd.DataFrame(password3)
 
 
 ### 답
+```python
 
+pw_data_cat = pd.merge(pw_data, pw_data2, left_on = 'C1', right_on='C4', how='outer')
+pw_data_cat.merge(pw_data3, left_on='C5', right_on = 'C8').drop(['C2','C3','C5','C6'],axis = 1)
+
+```
+- merge 함수에서 매개변수를 left_on, right_on을 써서 A끼리 같은 행에 배정되도록 A가 있는 열을 기준으로 잡아주고
+- 같은 방식의 반복 및 사이에 낀 열은 drop함수로 날려보내기.
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/a409e5e2-1e36-4079-bffc-1404a1f798f1)
+
+
+<br/><br/>
+- 혹은,
+```python
+
+# password2에서 C6 -> C2로
+# password3에서 C8 -> C5로 변경
+
+pw_data_cat = pd.merge(pw_data, pw_data2, on = 'C2')
+pw_data_cat.merge(pw_data3, on='C5').drop(['C2','C3','C5'],axis = 1)
+
+```
+- A가 포함된 행에서 공통된 데이터값을 가지는 열을 기준으로 삼아
+- on을 활용하여 병합
+- A가 포함된 열을 기준삼지 않는 이유: 기준축에서 중복된 데이터 하나는 사라집니당! A가 연달아 세 개가 못나오게 되겠쥬
+- drop으로 사이에 낀 열을 날려보내기
+
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/a0c5bf2c-f49b-4206-b4a9-b118312681c8)
