4주차_조윤정_과제3.md

--- a/4주차/3팀/4주차_조윤정_과제3.md
+++ b/4주차/3팀/4주차_조윤정_과제3.md
@@ -43,12 +43,11 @@ dust[[20231029, 20231030, 20231031]].apply(lambda x:round((x.sum())/3), axis=1)
 ```
 
 <br/>
-<img width="486" alt="image" src="https://github.com/yoonie03/image/assets/128327967/f1f013a6-def0-4e75-acbc-8576f69c9d5a">
+<img src = https://github.com/yoonie03/image/assets/128327967/f1f013a6-def0-4e75-acbc-8576f69c9d5a>
 <br/>
 
 <br/>
-<img width="486" alt="image" src="https://github.com/yoonie03/image/assets/128327967/48916753-d786-470c-bfb9-2a620cb15886">
-
+<img src = https://github.com/yoonie03/image/assets/128327967/48916753-d786-470c-bfb9-2a620cb15886>
 <br/>
 
 </p>
