--- a/5주차/4팀/5주차_이계무_과제3.md
+++ b/5주차/4팀/5주차_이계무_과제3.md
@@ -1,1 +1,3 @@
-ㅇ
+seaborn 라이브러리에서 tips 데이터셋을 로드하여, cut 함수를 활용하여 total_bill 변수를 3개 구간으로 나눈 값을 total_bill_bin 컬럼에 저장하고, 이 컬럼의 구간값을 기준으로 tip의 값을 구간화하여 총 6개의 고윳값을 생성해보세요. data.tip_bin.value_counts()를 활용하여 그 값을 확인해보세요. (힌트 : 책의 273페이지 참고)
+
+정답: https://colab.research.google.com/drive/1yNjcME2O8RjMp-wHYR8WQyZUMBBtJb8z?usp=sharing
