--- a/5주차/3팀/5주차_조윤정_과제2.md
+++ b/5주차/3팀/5주차_조윤정_과제2.md
@@ -62,7 +62,7 @@ data_c.compare(data_c_2, keep_shape=True)
 ```
 
 데이터 길이가 다른 경우
-```pyhton
+```python
 import pandas as pd
 
 data_e = pd.DataFrame({
@@ -178,7 +178,7 @@ diamonds.groupby(['cut', 'clarity'])['price'].mean().unstack()
 ## 5.1.2 데이터 집계
 배열로부터 숫자 데이터를 만들어내는 것과 관련한 모든 작업
 
-```
+```python
 #관련 함수
 conunt() # 결측값을 제외한 값의 개수를 반환
 sum() # 결측값을 제외한 값들의 합을 반환
@@ -226,7 +226,7 @@ penguins.groupby(‘sex’)['body_mass_g'].describe().unstack('sex')
 ```
 
 describe() 함수와 apply 함수
-```pyhton
+```python
 #이전 예제에서 apply에 lambda를 활용하여 백분위수까지 반환
 penguins.groupby('sex')['body_mass_g', 'flipper_length_mm'].apply(lambda x: x.describeO)
 ```
