--- a/5주차/5팀/5주차_조예림_과제3.md
+++ b/5주차/5팀/5주차_조예림_과제3.md
@@ -1,7 +1,8 @@
 ### Q1. 
-### 시본의 다이아몬드 데이터셋을 이용하여 '색깔' 컬럼을 기준으로 그룹화한 후
-### 깊이를 의미하는 depth컬럼의 평균값을 추출하시오.
+#### 시본의 다이아몬드 데이터셋을 이용하여 '색깔' 컬럼을 기준으로 그룹화한 후 깊이를 의미하는 depth컬럼의 평균값을 추출하시오.
 
+
+### 힌트
 
 
 
