--- a/5주차/5팀/5주차_조예림_과제3.md
+++ b/5주차/5팀/5주차_조예림_과제3.md
@@ -4,7 +4,7 @@
 </br></br></br></br></br></br></br>
 
 ### 힌트
-#### groubpy사용
+#### groupby() 함수를 사용해보시게나~
 </br></br></br></br></br></br></br>
 --------------------------------------------------------------------
 ### 답
