--- a/5주차/5팀/5주차_조예림_과제3.md
+++ b/5주차/5팀/5주차_조예림_과제3.md
@@ -8,5 +8,7 @@
 </br></br></br></br></br></br></br>
 --------------------------------------------------------------------
 ### 답
-## <img width="340" alt="image" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/db1beee7-7daf-4de7-b1dc-7bd66da08ec0">
+
+
+<img width="340" alt="image" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/70877858/db1beee7-7daf-4de7-b1dc-7bd66da08ec0">
 
