--- a/5주차/3팀/5주차_임시현_과제3.md
+++ b/5주차/3팀/5주차_임시현_과제3.md
@@ -11,5 +11,7 @@ diamonds = sns.load_dataset('diamonds')
 diamonds.groupby('cut')['price'].mean()
 ```
 
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128217747/8767c20f-594d-4d43-8c64-5adbd061668c)
+
 </div>
 </details>
