--- a/5주차/2팀/5주차_전유진_과제3.md
+++ b/5주차/2팀/5주차_전유진_과제3.md
@@ -1,4 +1,4 @@
-import seaborn as sns
+import seaborn as sns \n
 penguin = sns.load_dataset('penguins')
 
 으로 펭귄 데이터를 불러온 뒤, 각 island별로 bill_length_mm, body_mass_g의 평균값과 표준편차가 어떻게 되는지 보여라.
@@ -7,3 +7,19 @@ penguin = sns.load_dataset('penguins')
 (힌트: agg 함수를 써라)
 
 
+<details>
+<summary>정답</summary>
+<div markdown="1">
+
+```python
+
+import seaborn as sns
+penguin = sns.load_dataset('penguins')
+penguin.groupby('island')['bill_length_mm','body_mass_g'].agg(['mean','std'])
+
+```
+
+
+
+</div>
+</details>
