--- a/5주차/5팀/5주차_ 김범열_과제3.md
+++ b/5주차/5팀/5주차_ 김범열_과제3.md
@@ -10,14 +10,11 @@
 
 # 정답
 ```python
- min_e= pd.DataFrame({
-'패션아이템’: ['팬츠', '스커트', '지켓', '티셔츠', '블라우스', '베스트']
-'평점': [3.0, 5.0, 7.0, 5.0, 2.0, 4.0]
-})
- gyeong_e  = pd.DataFrame ({
-'패션아이템’: ['팬츠', '스커트', '지켓', '티셔츠', '블라우스', '베스트', '패딩'
-'평점': [3.0, 6.0, 7.0, 3.0, 2.0, 4.0, 8.0]
-})
+import pandas as pd
 
- gyeong_e [min_e.eq( gyeong_e ).all(axis=l) == True]
+min_e = pd.DataFrame({'패션아이템': ['팬츠', '스커트', '지켓', '티셔츠', '블라우스', '베스트'], '평점': [3.0, 5.0, 7.0, 5.0, 2.0, 4.0]})
+gyeong_e = pd.DataFrame({'패션아이템': ['팬츠', '스커트', '지켓', '티셔츠', '블라우스', '베스트', '패딩'], '평점': [3.0, 6.0, 7.0, 3.0, 2.0, 4.0, 8.0]})
+
+merged_df = pd.merge(gyeong_e, min_e, how='inner', on=['패션아이템', '평점'])
+print(merged_df)
 ```
