--- a/6주차/3팀/6주차_박경준_과제3.md
+++ b/6주차/3팀/6주차_박경준_과제3.md
@@ -5,13 +5,13 @@
 펭귄 데이터셋 불러오고, filpper_length_mm을 히스토그램으로 시각화하라.
 단, x축 이름은 flipper_length_mm, y축 이름은 Count로 설정하여라.
 또한, legend는 upper right로 설정하라.
-````
 
 <details><summary><힌트></summary>
 <p>
 
 ```python
 330페이지 참고.
+how='outer'
 ```
 
 </p>
@@ -32,7 +32,7 @@ plt.ylabel('Count')
 plt.legend(loc='upper right')
 ```
 <br/>
-
+<img width="479" alt="6주차_박경준_과제3_정답" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128224810/e221d52e-035b-49f2-ba6b-7949e1027884">
 <br/>
 
 </p>
