--- a/6주차/4팀/6주차_이계무_과제2.md
+++ b/6주차/4팀/6주차_이계무_과제2.md
@@ -12,4 +12,72 @@ Male 19.252941 51 094118 3938.970588 199.911765
 Gentoo Female 14.237931 45 563793 4679 741379 212.706897
 Male 15718033 49.473770 5484.836066 221.540984
 ```
-- pivot_table 함수는 index를 지정하여 특정 연산을 수행해주고, 기본은 평균값을 구해 준다.
+- pivot_table 함수는 index를 지정하여 특정 연산을 수행해주고,  경우 평균값을 구해 준다.
+
+```python
+penguins.pivot_table(values=['body_mass_g', 'flipper_length_mm'],
+index=['species', 'island'],
+columns='sex',
+margins=True)
+                body_mass_g                         flipperlength_mm
+     sex        Female       Male        All        Female       Male     All
+species island
+Adelie Biscoe 3369.318182 4050.000000 3709.659091 187.181818 190.409091 188.795455
+Dream 3344444444 4045.535714 3701.363636 187.851852 191.928571 189 927273
+Ibrgersen 3395 833333 4034.782609 3708.510638 188.291667 194.913043 191.531915
+Chinstrap Dream 3527.205882 3938 970588 3733.088235 191.735294 199.911765 195.823529
+Gentoo Biscoe 4679.741379 5484.836066 5092.436975 212 706897 221.540984 217.235294
+All 3862 272727 4545.684524 4207 057057 197.363636 204 505952 200.966967
+```
+- margins=True를 통해 All 컬럼이 하나 더 생겼고, 상위 컬럼의 합계를 반환한다.
+- values에 연산값을 얻을 목표 컬럼을 지정할 수 있다.
+- columns에 지정한 컬럼명은, 그 값을 기준으로 데이터를 분리해준다.
+- aggfunc 매개변수에 mean 대신 다른 값을 넣어 여러 목표값을 얻어낼 수 있다.
+
+### 5.2.2 crosstab 기초
+
+```python
+pd.crosstab(index=[penguins.species, penguins.sex],
+columns=penguins.island,
+margins=True)
+
+island Biscoe Dream Tbrgersen All
+species sex
+Adelie Female 22 27 24 73
+Male 22 28 23 73
+Chinstrap Female 0 34 0 34
+Male 0 34 0 34
+Gentoo Female 58 0 0 58
+Male 61 0 0 61
+All 163 123 47 333
+```
+
+- crosstab을 활용하여 categorical data의 빈도를 더 편하게 다룰 수 있는데, pivot_table에서도 처리는 가능하다.
+- 결측값까지 연산에 포함하려면 dropna=False를 전달해주면 된다.
+
+## 7.1 맷플롯립 데이터 시각화
+### 7.1.1 기초: 라인그래프 출력과 관련 옵션 사용자화
+```python
+import numpy as np
+import pandas as pd
+import seaborn as sns
+import matplotlib
+import matplotlib.pyplot as plt
+```
+- 맷플롯립을 사용하기위한 기본 라이브러리 numpy, pandas, seaborn, matplotlib.pyplot을 로드한다.
+- 함수를 그릴때는 plt.plot()에 값을 전달해주고, plt.show()를 통해 plot한다.
+
+```python
+plt.plot([2, 1, 5, 3, 7, 8, 13])
+
+data = np.arange(10)
+plt.plot(data)
+
+data_x = [1, 2, 3, 4]
+data_y = [2, 3, 5, 10]
+plt.plot(data_x, data_y)
+```
+- 함수에 매개변수를 하나만 전달하면 y값으로 사용하고, 두개를 전달하면 순서대로 x,y로 사용한다.
+- plt.xlabel, plt.ylabel로 축 이름과 각종 설정값을 적용할 수 있다.
+- plt.legend로 함수의 범례를 표시해준다.
+- plt.xlim(), plt.ylim() 으로 축의 최솟값 최대값을 정해줄 수 있다. 숫자 데이터를 전달한다. 
