--- a/6주차/4팀/6주차_이계무_과제2.md
+++ b/6주차/4팀/6주차_이계무_과제2.md
@@ -80,4 +80,27 @@ plt.plot(data_x, data_y)
 - 함수에 매개변수를 하나만 전달하면 y값으로 사용하고, 두개를 전달하면 순서대로 x,y로 사용한다.
 - plt.xlabel, plt.ylabel로 축 이름과 각종 설정값을 적용할 수 있다.
 - plt.legend로 함수의 범례를 표시해준다.
-- plt.xlim(), plt.ylim() 으로 축의 최솟값 최대값을 정해줄 수 있다. 숫자 데이터를 전달한다. 
+- plt.xlim(), plt.ylim() 으로 축의 최솟값 최대값을 정해줄 수 있다. 숫자 데이터를 전달한다. plt.axis는 x,y축 순서로 4개의 숫자값을 전달한다.
+- color 매개변수를 이용하여 색깔을 지정할 수 있다.
+- linestyle 매개변수에 solid, dashed, dotted, dashdot을 지정할 수 있다.
+- plt.grid(True)를 통해 그리드를 표시할 수 있다.
+- plt.title()을 통해 제목과 글씨, 위치 등을 설정할 수 있다.
+
+```python
+plt.subplot(2, 1, 1)
+plt.plot([l, 2, 3, 4], [3, 4, 1, 7], linestyle='solid', color='g', label='solid')
+plt.xlabel('speed')
+plt.ylabel('Data A')
+pit.subplot(2, 1, 2)
+plt.plot([l, 2, 3, 4], [5, 2, 9, 6], linestyle='solid', color='limegreen',
+label='solid')
+plt.xlabel('speed')
+plt.ylabel(Data B')
+plt.tight_layout()
+plt.show()
+```
+- subplot으로 그래프를 여러개 한번에 만들 수 있다. 
+
+### 7.1.2 데이터 분포 확인: 히스토그램
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/79017335-4573-4c54-929d-da8bcb7c36ca)
+
