--- a/6주차/4팀/6주차_이계무_과제2.md
+++ b/6주차/4팀/6주차_이계무_과제2.md
@@ -103,4 +103,50 @@ plt.show()
 
 ### 7.1.2 데이터 분포 확인: 히스토그램
 ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/79017335-4573-4c54-929d-da8bcb7c36ca)
+```python
+plt.hist()
+```
+
+- 누적 히스토그램과 분포 히스토그램을 만들 수 있다.
+- 데이터가 어떻게 분포되어있는지 확인할 때 사용하기 적절하다.
+
+
+
+### 7.1.3 범주형 데이터 개수 확인 : 막대그래프
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/be0b0214-d5df-4058-b985-db103cabb7b0)
+
+```python
+plt.bar()
+```
+
+- 가장 기본적인 막대그래프이다.
+
+### 7.1.4 수치형 데이터 상관관계 : 산점도
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/73e8939d-fc10-41fa-96cc-a5ee8ded17e0)
+
+```python
+plt.scatter()
+```
+
+- 두개의 수치형 변수간의 관계를 파악할 때 사용할 수 있다.
+- s로 사이즈, c로 색깔, alpha로 투명도를 변경할 수 있다.
+
+### 7.1.5 데이터 분포 확인과 이상값 찾기: 박스플롯
+```python
+plt.boxplot()
+```
+
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/3d95bbd9-af6d-4ed0-998c-0fbcdcfd8e2e)
+
+- boxplot은 사분위수를 기준으로 값을 확인하거나, 이상값을 찾을때 사용한다.
+
+### 7.1.6 데이터 분포와 상세 모양 확인: 바이올린그래프
+```python
+plt.violinplot()
+```
+
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/5e435615-9759-48b0-88af-e66d7a9bd515)
+
+- boxplot에서 데이터 분포까지 확인할 수 있는 violinplot이다.
+
 
