--- a/6주차/5팀/6주차_김민성_과제2.md
+++ b/6주차/5팀/6주차_김민성_과제2.md
@@ -34,7 +34,9 @@ matplotlib.__version__
 5. 2개 이상의 데이터가 동시에 그려지는 경우에는 범례의 열 개수를 지정할 수 있다. 기본은 1이지만 2로 설정하면 2열로 표시된다.
 6. plot() 함수의 매개변수 color로 컬러를 지정할 수 있으며 특정 컬러를 표현하는 문자로도 입력 가능하다.
 7. 라인 스타일은 plot() 함수의 매개변수 linestyle로 지정한다.
-8. plot() 함수는 기본적으로 그리드를 표시하지 않지만 grid() 함수를 결합하면 그리드를 표시할 수 있다.
+8. plot() 함수는 기본적으로 그리드를 표시하지 않지만 grid() 함수를 결합하면 그리드를 표시할 수 있다. grid() 함수를 True로 지정하면 그리드가 표시된다.
+<img width="532" alt="image" src="https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128350167/243e77a9-cdaf-46e2-aea0-bda5cc29179d">
+
 9. 그리드가 표시되는 방향은 axis 매개변수로 지정한다. 또한 컬러, 투명도, 라인스타일도 지정할 수 있다.
 10. title () 함수로 그래프의 타이틀을 설정할 수 있다. loc으로 위치 설정이 가능하며, pad로 그래프와의 공백 지정도 가능하다.
 11. 다중 플로팅은 데이터 분석 시 여러 개의 그래프를 동시에 출력해서 비교하는 경우에 활용한다. 이 때 subplot() 함수를 활용할 수 있다.
