--- a/6주차/2팀/6주차_박신영_과제2.md
+++ b/6주차/2팀/6주차_박신영_과제2.md
@@ -1,1 +1,130 @@
-.
+## 내용정리
+
+<details>
+<summary>5.2 피벗테이블과 크로스탭</summary>
+<div markdown="1">
+
+```python
+# 피벗: 일부 데이터만을 추출해서 2차원 데이터프레임으로 변환
+DataFrame.pivot(index= ,colums= ,values= )
+
+# 피벗테이블: 피벗과 동일
+DataFrame.pivot_table(index= ,columns= ,values= ,margin=0/1, aggfunc=연산방식{딕셔너리})
+## values에 대하여 인덱스/컬럼의 value 전체 연산값을 ALL 인덱스/컬럼을 생성해 저장
+
+# 크로스탭: 특정 변수의 빈도, 개수를 출력
+pd.crosstab(index= ,columns= ,margin=0/1,dropna=0/1)
+```
+
+</div>
+</details>
+
+
+<details>
+<summary>7.1.1 그래프 출력 기초</summary>
+<div markdown="1">
+
+데이터 시각화
+```python
+import matplotlib
+import matplotlib.pyplot as plt
+
+plt.plot([]) # 리스트의 인덱스가 x축이 되고 밸류가 y축으로 놓임
+plt.plot([values_x],[values_y]) # 앞에 놓인 것이 x축이 되고 뒤에 놓인 것이 value로서 y축으로 놓임
+plt.plot(color=,linestyle=) #linestyle 종류: solid, dashed, dotted, dashdot
+
+plt.xlabel
+plt.ylabel('Label',labelpad=,fontdict={})
+plt.title('Title',fontdict=,loc=,pad=)
+## fontdict의 인덱스로 쓰이는 것: family, color, weight, size
+## title의 경우 인덱스 좀 다름: fontsize,fontweight, or something
+
+plt.legend(loc=(x좌표,y좌표),ncol=) # loc 초기화 안 하면 대신 best 쓸 수 있음.
+
+plt.xlim([시,끝])
+plt.ylim([시,끝])
+plt.axis([x최소,x최대,y최소,y최대])
+plt.grid(0/1,axis=,color=,alpha=,linestyle=) # 그리드는 바둑판 무늬
+
+plt.subplot(배치 행, 열, 주소1)
+plt.plot( ~~ )
+plt.subplot(배치 행, 열, 주소2)
+plt.plot( ~~ )
+
+plt.tight_layout()
+plt.show()
+```
+
+</div>
+</details>
+
+
+<details>
+<summary>7.1.2 히스토그램</summary>
+<div markdown="1">
+
+데이터 분포 확인
+```python
+plt.hist(value,bins=,lable=,color=,cumulative=0/1, histtype=)
+## histtype: bar, barstacked, step, stepfilled
+```
+
+</div>
+</details>
+
+
+<details>
+<summary>7.1.3 막대그래프</summary>
+<div markdown="1">
+
+범주형 데이터 개수 확인(카테고리 데이터)
+```python
+plt.bar([valuesss],color=[인덱스에 맞춰서 색 지정],width=)
+plt.barh( ** same ** )
+```
+
+</div>
+</details>
+
+
+<details>
+<summary>7.1.4 산점도</summary>
+<div markdown="1">
+
+수치형 데이터 상관관계
+```python
+plt.scatter(x=,y=,s=,c=,alpha=,cmap=)
+```
+
+</div>
+</details>
+
+
+<details>
+<summary>7.1.5 박스플롯</summary>
+<div markdown="1">
+
+데이터 분포 확인과 이상값 찾기
+```python
+plt.boxplot([valuesss],notch=0/1,whis=2.0,vert=0/1)
+```
+
+</div>
+</details>
+
+
+<details>
+<summary>7.1.6 바이올린그래프</summary>
+<div markdown="1">
+
+데이터 분포와 상세 모양 확인
+박스플롯과 유사
+```python
+VPLOT = plt.violinplot([valuesss], positions=[], showmeans=0/1, quantiles=[시작분위~끝분위])
+VPLOT[col][idx].set_facecolor('00색')
+VPLOT[col][idx].set_edgecolor('00색')
+```
+
+</div>
+</details>
+
