--- a/6주차/2팀/6주차_박신영_과제2.md
+++ b/6주차/2팀/6주차_박신영_과제2.md
@@ -128,3 +128,25 @@ VPLOT[col][idx].set_edgecolor('00색')
 </div>
 </details>
 
+
+
+## 주요 함수
+1. 피벗테이블: DataFrame.pivot_table(index= ,columns= ,values= ,margin=0/1, aggfunc=연산방식{딕셔너리})
+
+
+얻은 데이터를 원하는 방식을 골라 연산하는 등의 부가적 기능이 인자를 통해 사용하는 점이 좋다고 생각한다.
+
+2. 막대그래프: plt.bar([valuesss],color=[인덱스에 맞춰서 색 지정],width=)
+
+
+그래프의 일반적인 쓰임은 수치 비교이다. 막대그래프는 수치 비교를 가장 효과적으로 시각화할 수 있는 방법이라고 생각한다. 이를 이용해서 내년 메이커스 데이 때 LCD 패널에 그래프를 나타내는 작업을 해보고 싶다.
+
+3. 박스플롯: plt.boxplot([valuesss],notch=0/1,whis=2.0,vert=0/1)
+
+
+뒤이어 나오는 바이올린그래프가 박스플롯의 아류라고 하는데, 범위 표현 뿐 아니라 해당 영역이 가지는 값의 사이즈까지, 더하여 다양한 모양을 이용하여 이상값 등을 추출할 수 있다는 점에서 굉장히 활용 가치가 높은 그래프라고 생각한다.
+
+
+## 느낀점
+그래프를 다양하게 다룰 수 있게 되어서 좋을 것 같다. 그러나 그만큼 생각해야 할 것도, 로직에 적용해야 할 것도 많아져서 혼동하지는 않을까 걱정된다.
+처음에 읽을 때는 각 그래프의 색 지정이 무슨 의미일까 싶었는데, 색이 시각적인 요소 중 굉장히 큰 영향을 미치고, 그래프 구성은 눈에 한 번에 잘 들어오게끔 하는 것이 목적이므로, 색 지정이 굉장히 중요한 요소임을 깨달았다.
