--- a/6주차/2팀/6주차_박신영_과제3.md
+++ b/6주차/2팀/6주차_박신영_과제3.md
@@ -1,1 +1,61 @@
-.
+객관식 문제. 다음 중에 색 변경이 가능하면서 함수 인자를 이용하지 않고 색을 바꾸는 것을 고르시오.
+- 1번 막대그래프
+- 2번 산점도
+- 3번 바이올린그래프
+- 4번 히스토그램
+
+주관식 문제
+
+
+시본에서 penguins 데이터셋을 가져와서, 검은색 히스토그램과 빨간색 가로방향 막대그래프, 노란색 세로방향 막대그래프를 함께 출력하시오.(인덱스, 컬럼 선택은 자유롭게)
+
+<details>
+<summary>객 정답</summary>
+<div markdown="1">
+
+4번 바이올린그래프
+set_facecolor(), set_edgecolor()
+
+</div>
+</details>
+
+
+<details>
+<summary>힌트</summary>
+<div markdown="1">
+
+subplot을 사용하여 함께 출력하기
+인자는 color
+숫자를 다루는 컬럼을 호출해서 사용하기
+
+</div>
+</details>
+
+<details>
+<summary>주 정답</summary>
+<div markdown="1">
+
+![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/e24d9138-a9e0-4515-9cc6-b3fd829d7c11)
+
+```python
+
+import numpy as np
+import pandas as pd
+import seaborn as sns
+import matplotlib
+import matplotlib.pyplot as plt
+
+penguins = sns.load_dataset('penguins')
+penguins
+
+plt.subplot(3,1,1)
+plt.hist(penguins['bill_length_mm'],color='black')
+plt.subplot(3,1,2)
+plt.barh(penguins['bill_length_mm'],color='red',height = 1,width=0.2)
+plt.subplot(3,1,3)
+plt.bar(penguins['bill_length_mm'],color='yellow',height = 1,width= 0.2)
+
+```
+
+</div>
+</details>
