--- a/6주차/2팀/6주차_박신영_과제3.md
+++ b/6주차/2팀/6주차_박신영_과제3.md
@@ -4,11 +4,6 @@
 - 3번 바이올린그래프
 - 4번 히스토그램
 
-주관식 문제
-
-
-시본에서 penguins 데이터셋을 가져와서, 검은색 히스토그램과 빨간색 가로방향 막대그래프, 노란색 세로방향 막대그래프를 함께 출력하시오.(인덱스, 컬럼 선택은 자유롭게)
-
 <details>
 <summary>객 정답</summary>
 <div markdown="1">
@@ -18,6 +13,12 @@ set_facecolor(), set_edgecolor()
 
 </div>
 </details>
+
+
+주관식 문제
+
+
+시본에서 penguins 데이터셋을 가져와서, 검은색 히스토그램과 빨간색 가로방향 막대그래프, 노란색 세로방향 막대그래프를 함께 출력하시오.(인덱스, 컬럼 선택은 자유롭게)
 
 
 <details>
@@ -34,6 +35,8 @@ subplot을 사용하여 함께 출력하기
 <details>
 <summary>주 정답</summary>
 <div markdown="1">
+
+>  **어라 짱구잖아? 누가 봐도 짱구인걸**
 
 ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/128358741/e24d9138-a9e0-4515-9cc6-b3fd829d7c11)
 
