--- a/6주차/3팀/6주차_조윤정_과제3.md
+++ b/6주차/3팀/6주차_조윤정_과제3.md
@@ -4,7 +4,8 @@
 bill_depth_mm 값을 X축으로, flipper_length_mm을 y축으로 
 하는 산포도를 그려주세요!      
 
-x축과 y축에 label을 설정하고, title은 알아서 설정해주세요!!
+x축과 y축에 label을 설정하고, title은 알아서 설정해주세요!!   
+이 때 색깔이 구분되도록 원하는 색깔로 잘 설정해주세요!   
 
 <details><summary><힌트></summary>
 <p>
