--- a/6주차/5팀/6주차_석민정_과제3.md
+++ b/6주차/5팀/6주차_석민정_과제3.md
@@ -1,8 +1,8 @@
 ## 문제: 색상을 맞추시오
-# 1) w는 무슨 색상일까요?
-# 2) k는 무슨 색상일까요?
-# 3) color 속성에 입력하여 구해보시오 ' #000080 '
-# 4) color 속성에 입력하여 구해보시오 ' #800000 '
+### 1) w는 무슨 색상일까요?
+### 2) k는 무슨 색상일까요?
+### 3) color 속성에 입력하여 구해보시오 ' #000080 '
+### 4) color 속성에 입력하여 구해보시오 ' #800000 '
 
 
 
