--- a/6주차/5팀/6주차_석민정_과제3.md
+++ b/6주차/5팀/6주차_석민정_과제3.md
@@ -24,10 +24,12 @@
 
 ___________________________________________________________________
 
-
-
-## 정답
+<details>
+  <summary> 정답 </summary>
 1) 화이트
 2) 블랙
 3) 네이비
 4) 마룬
+
+
+</details>
