--- a/6주차/2팀/6주차_김태경_과제2.md
+++ b/6주차/2팀/6주차_김태경_과제2.md
@@ -1,11 +1,64 @@
-대충의 제목
+피벗테이블 / 데이터 시각화
 =================
 !!! 이하 내용은 기본적으로 다음의 코드가 작성되었음을 기준으로 합니다.
 
     import numpy as n
     import pandas as p
     import seaborn as s
-    t = s.load_dataset('titanic')
+    pdr = s.load_dataset('penguins')
 
 # 1. 피벗테이블과 크로스탭 활용
-인증시험 이후 작성 예정
+pivot_table() 함수를 이용하면 groupby()로 만든 레벨이 있는 인덱스 구조의 데이터를 재형성하는 것이 가능하다.
+## 기초 사용법
+* 괄호 안에 index=['원하는 컬럼']을 넣으면 원하는 컬럼을 인덱스로 만들고, 이에 대한 전체 컬럼의 평균을 구한다.
+* values=['원하는 컬럼']을 넣으면 원하는 컬럼을 기준 컬럼으로 만들 수 있다.
+* columns='원하는 컬럼'을 넣으면 해당 컬럼을 하위 컬럼값으로 재형성할 수 있다.
+* 위 3개를 적용하는 경우 상위 컬럼의 합계는 제공하지 않지만, margins=True를 쓰면 볼 수 있다.
+* 기본 집계함수는 mean()으로 적용되며, aggfunc를 이용해 len이나 count등의 방식을 쓸 수 있다.
+## 크로스탭
+p.crosstap()을 쓰면 특정 그룹의 빈도를 계산할 수 있다. 어지간한 경우는 피벗테이블로 다 커버가 가능하지만, 크로스탭이 더 편리한 경우가 있어 알아두면 좋다.
+* 기본 사용 방법은 피벗테이블과 같다.
+
+# 1.5 날짜시간 데이터처리
+과제 범위가 아니라 스킵.
+
+# 2. 데이터 시각화
+데이터 시각화에는 크게 2가지 방식이 쓰이는데, 하나는 시본이고 다른 하나는 맷플롯립이다. 
+## 맷플롯립
+맷플롯립을 쓰기 위해서는 다음과 같은 라이브러리를 추가로 사용해야 한다.
+
+        import matplotlib as m
+        import matplotlib.pyplot as mp
+
+여기서 버전을 확인하려면 m.__version__을 쓰면 현재 맷플롯립의 버전이 나온다.
+### 라인그래프
+* 라인그래프를 그리는 함수는 plot()이다. mp.plot([데이터])을 쓰면 그래프를 그릴 수 있다.
+* 그린 그래프를 보고 싶으면 mp.show()를 쓰면 된다.
+* X, Y 값을 동시에 설정하고 싶으면 각각의 그래프를 따로 만들어 ,로 연결해 써주면 된다.
+* 레이블을 붙이는 함수는 mp.xlabel('이름', labelpad=크기, fontdict={'color': '색', 'size': 크기})이다. y레이블은 xlabel 대신 ylabel을 쓰면 된다.
+* 범례를 표시하려면 mp.legend(x위치, y위치)쓰면 된다. 위치를 안적거나 loc='best'쓰면 알아서 배정해준다.
+* mp.xlim이나 .ylim을 이용하면 축의 범위를 조절할 수 있다.아니면 axis()로 한방에 정리해도 된다.
+* plot 괄호 안에 color='색'입력하면 색을 바꿀 수 있다.
+### 히스토그램
+* 히스토그램을 그리려면 mp.hist()를 쓰면 된다.
+* 누적 히스토그램을 그리려면 괄호 안에 cumulative=True로 하면 된다.
+### 막대그래프
+* 막대그래프를 그리려면 mp.bar()를 쓰면 된다.
+* 막대 너비는 width=0~1사이값 으로 조정한다.
+* bar대신 barh쓰면 xy반전된다.
+### 산점도
+* 산점도를 그리려면 mp.scatter()쓰면 된다.
+* 도형 크기는 s, 색은 c, 투명도는 alpha로 바꾼다.
+### 박스플롯 외 기타 등등
+* 박스플롯을 그리려면 mp.boxplot()을 쓴다.
+* 바이올린그래프는 mp.violinplot()을 쓴다.
+
+인상깊은 코드와 활용법
+----------------------
+import matplotlib as m, import matplotlib.pyplot as mp 이 2가지가 가장 인상깊었다. 뭐 하나가 인상깊은 명령어였다기보다는 그래프를 그리는 기능 자체가 신기했던 것 같고, 우리가 그동안 다뤄봤던 데이터들을 드디어 시각화할 수 있구나라는 생각이 느껴졌고 그동안의 노력을 이제 눈으로 더 명확하게 볼 수 있어 편할 것 같다는 느낌이 들었다. 앞으로 기존에 썼던 코드들을 이용해 데이터테이블을 변형해본 것들을 토대로 그래프를 그려볼 수 있을 것 같다.
+
+느낀점
+---------------
+끝을 달려가는 데분스이다. 지난주 발표를 무사히 끝낸 나와 조원들에게 박수~~        
+2학기를 마무리하고 나서 데분스 내용을 돌아보며 각각의 함수들을 더 익혀보고, 다양하게 사용해볼 계획을 세웠다.        
+2차 인증 시험 시간이 너무 빠듯했다. 5번 쉬운거였는데 못풀어서 빡쳤다.
