--- a/7주차/4팀/7주차_이계무_과제2.md
+++ b/7주차/4팀/7주차_이계무_과제2.md
@@ -17,7 +17,7 @@ september_flights = flights.query("month == 'Sep'")
 
 ```python
 sns.lineplot(x='year',y='passengers',hue='month',data=flights)
-sns.replot(x='day',y='tip',kind='line',col='sex',hue='smoker',data=tips)
+sns.relplot(x='day',y='tip',kind='line',col='sex',hue='smoker',data=tips)
 ```
 ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/2c011923-2c62-4f50-80db-f0a1f1d89424)
 
@@ -42,7 +42,7 @@ sns.displot(x='body_mass_g',hue='species',col='sex',kind='hist',multiple='stack'
 ```python
 tips = sns.load_dataset('tips')
 sns.scatterplot(x='total_bill',y='tip',data=tips)
-sns.replot(x='total_bill',y='tip',col='time',hue='day',style='day',kind='scatter',data=tips)
+sns.relplot(x='total_bill',y='tip',col='time',hue='day',style='day',kind='scatter',data=tips)
 ```
 ![image](https://github.com/sejongsmarcle/2023_Autumn_DataAnalysisStudy/assets/127960949/0b0fc05d-a0e3-4da8-a451-96487cda454d)
 
