--- a/7주차/2팀/7주차_박신영_2주차.md
+++ b/7주차/2팀/7주차_박신영_2주차.md
@@ -1,1 +1,118 @@
-.
+<details><summary> 코드 필기 </summary>
+<p>
+
+```python
+
+import numpy as np
+import pandas as pd
+import seaborn as sns
+import matplotlib
+import matplotlib.pyplot as plt
+sns.set_style('whitegrid')
+
+iris = sns.load_dataset('iris')
+tips = sns.load_dataset('tips')
+fly = sns.load_dataset('flights')
+fly
+
+''' 라인그래프. 값을 한정하지 않으면 평균과 신뢰구간을 나타냄
+sns.lineplot(x='year',y='passengers',data=fly)
+'''
+# p345 query(): sql 데이터 필터링 함수
+''' query 함수를 통해 원하는 데이터만 시각화
+september_fly = fly.query("month == 'Sep'") # 왜 큰따옴표가 쓰이는지? 조건문이라 그런가?
+sns.lineplot(x='year',y='passengers',data=september_fly)
+'''
+''' 월별 평균값 라인그래프
+sns.lineplot(x='year',y='passengers',hue='month',data=fly)
+'''
+''' relplot 함수를 통해 여러 개의 라인그래프 출력
+sns.relplot(x='day',y='tip',kind='line',col='sex',hue='smoker',errorbar=None,data=tips)
+# 신기하게 교재에는 ci 인자를 사용하는데, 여기서는 errorbar 인자를 사용함
+'''
+
+penguins = sns.load_dataset('penguins')
+''' 히스토그램 구성(막대 개수, 너비, 가로세로)
+sns.histplot(x='flipper_length_mm',bins=20,binwidth=2,data=penguins,color='black')
+# 막대 개수 bins, 막대 너비 binwidth
+# 누운 막대그래프를 원한다면 x 대신 y에 데이터를 입력해주기
+'''
+''' 막대 쌓기
+sns.histplot(x='flipper_length_mm',hue='species',multiple='stack',data=penguins)
+# multiple='stack' : 같은 열의 막대를 중첩시키지 않고 적층시킴
+'''
+''' 여러 개의 그래프 출력
+sns.displot(x='body_mass_g',hue='species',col='sex',
+            kind='hist',multiple='stack',data=penguins)
+# col값 = 각 그래프를 나눈 기준
+# kind값 = 각 그래프의 모양
+'''
+
+# 산 점 도 p350
+'''
+sns.scatterplot(x='total_bill',y='tip',data=tips)
+## 인자로 x, y, hue(그래프간의 차이점), size, sizes(크기 세부정보), legend, data 받음
+## 여러 개 출력하려면 relplot() 사용. 용법은 displot()과 유사
+'''
+
+# 범주형 데이터: 막대그래프 countplot()
+'''
+sns.countplot(x = 'day',hue='time', data=tips)
+## 이 친구는 복수 출력 할 때 catplot()을 사용
+'''
+
+# 범주 + 수치 = barplot()
+'''
+sns.barplot(x= 'day',y='total_bill',hue='sex',data= tips, errorbar=('ci',65),palette='Blues_d')
+## 아까 relplot()에서는 ci 대신 errorbar에 오차값을 넣으면 되었는데
+## barplot()에서는 errorbar = ('ci',오차값) 으로 넣어야 하는 차이가 있다
+## 얘도 복수출력 시 catplot() 사용
+'''
+
+# 범주 + 수치 = boxplot()
+'''
+sns.boxplot(x='day',y='total_bill',hue='sex',data=tips,linewidth=2.5,palette='Set2')
+#sns.stripplot(x='day',y='total_bill',data=tips,color='.25')
+sns.swarmplot(x='day',y='total_bill',data=tips,color='.25') 
+## stripplot()에서 산점도가 겹치는 것을 개선한 그래프가 swarmplot()
+## "야 꿀벌"
+'''
+
+# " = 바이올린그래프
+'''
+sns.violinplot(x='day',y='total_bill',hue='sex',data=tips,palette='Set1',scale='count',
+               split = True, inner = 'stick',scale_hue=False,bw=.2)
+#inner = 'quartile'
+'''
+
+planets = sns.load_dataset('planets')
+
+'''
+sns.violinplot(x='orbital_period',y='method',
+               data = planets[planets.orbital_period < 1500],
+               scale='width',palette='Set2',
+               cut = 0)
+'''
+
+```
+
+
+</p>
+</details>
+
+
+
+## 내용간단정리
+- 단원 제목이 데이터 시각화인 만큼, 그래프를 출력하는 방식에 대해 다룸
+- 복수 출력 함수가 같은 그래프가 있고 다른 그래프들이 있더라
+- 오차값 처리를 인자 ci를 통해 한다고 책에 나와있지만, 버전의 차이인지 인자 errorbar가 그 역할을 대신하더라
+- swarmplot()의 아명은 꿀벌 그래프.. ~~귀엽다~~
+
+## 중요한 함수 + 활용방안
+1. relplot(), displot(), catplot(): 그래프 복수 출력을 위한 함수이다. 다 동일하게 복수 출력되는 각각의 그래프들을 나누는 기준을 정할때 인자 hue를 사용한다. hue를 기준으로 가능한 모든 섹션에 대한 그래프가 출력되므로 이를 통해 어떤 실험에서 영향을 주는 조건을 찾아낼 때에 기준별로 그래프를 비교하여 어떤 기준에 대하여 차이가 있는지를 관측하면 영향을 주는 조건을 찾아낼 수 있을 것 같다.
+2. query(): 판다스 부분부터 계속해서 등장하는 필터링 함수. 솔직히 좀 오래돼서 까먹어서 다시 찾아봤다. 그래프는 전체 데이터를 그림으로 나타낸 것이라서, 불필요한 데이터가 껴있으면 그림이 크게 달라질 수 있다. 사전에 그러한 오류를 잡기 위해서 데이터 필터링은 필수적이다. 위의 복수 출력 함수의 인자 hue와 마찬가지로, 비교할 데이터만 솎아낼 때 활용할 수 있다.
+3. 히스토그램에서의 인자 multiple: 같은 항목에서 다른 기준에 의해 중첩되어있는 히스토그램을 동일 항목이면 적층시켜서 총합을 눈에 띄게 할 수 있다. 총계를 구하는 것은 생각보다 중요한 작업이다. 이를 용이하게 해주므로 굉장히 쓸만하다고 생각한다.
+
+## 느낀점!
+- 이전 단원에서는 하나의 중요 함수에 대하여 여러 인자의 쓰임, 함수 활용형, 유사한 기능의 함수들을 배웠는데, 시각화 단원은 그 쓰임새가 각각 다른 여러 그래프를 출력하는 방법을 배우기 때문에 깊이는 덜하나 새로운 함수의 양이 많다는 생각이 들었다. 그나마 다행인 것은 인자의 쓰임은 대부분 비슷하다는 것.
+- 바이올린그래프는 여러 번 읽어도 각각의 인자를 통해서 얻을 수 있는 것이 무엇인지 잘 모르겠다. 박스플롯과 유사하다는 설명이 있지만, 바이올린처럼 생긴 그래프하고 직사각형 박스플롯하고 뭐가 비슷한지 이해할 수 없다.
